syntax = "proto3";

package depin;

option go_package = "github.com/oHakan/depin-orchestrator/proto";

// GPUInfo contains detailed specifications for a single GPU
message GPUInfo {
  string name = 1;             // GPU model name (e.g. "NVIDIA GeForce RTX 4090")
  int64 vram_mb = 2;           // Video Memory in Megabytes
  string driver_version = 3;   // Driver version (e.g. "535.104")
  string cuda_version = 4;     // CUDA version (e.g. "12.2")
}

// NodeInfo contains information about a GPU node/agent
message NodeInfo {
  string id = 1;              // Unique identifier for the node
  string gpu_model = 2;       // GPU model name (e.g., "NVIDIA RTX 4090")
  uint64 vram_total = 3;      // Total VRAM in bytes
  uint64 vram_free = 4;       // Available VRAM in bytes
  string docker_version = 5;  // Docker version installed on the node
  string owner_id = 6;        // Clerk User ID of the node provider
  
  // New hardware specs
  string cpu_model = 7;       // CPU model (e.g. "Intel Core i9-13900K")
  int32 cpu_cores = 8;        // Physical cores
  int64 ram_total_mb = 9;     // Total RAM in Megabytes
  int64 disk_total_gb = 10;   // Total Disk Space in GB
  string os_info = 11;        // OS Info (e.g. "Ubuntu 22.04 LTS")
  repeated GPUInfo gpu_info = 12; // List of GPUs in the node
}

// RegistrationResponse is returned after a node registration attempt
message RegistrationResponse {
  string status = 1;   // Status of the registration (e.g., "success", "error")
  string message = 2;  // Human-readable message about the registration result
}

// JobRequest is sent from orchestrator to agent to execute a container
message JobRequest {
  string job_id = 1;           // Unique identifier for this job
  string image = 2;            // Docker image to run (e.g., "alpine")
  repeated string command = 3; // Command to execute in the container
  string script_content = 4;   // Raw Python script content to execute
  int64 memory_limit_mb = 5;   // Memory limit in MB (e.g., 512 for 512MB)
  float cpu_limit = 6;         // CPU limit (e.g., 0.5 for half core, 1.0 for one core)
  int32 timeout_seconds = 7;   // Execution timeout in seconds (e.g., 60)
  repeated string requirements = 8; // Python dependencies to install (e.g., ["numpy", "pandas"])
}

// Heartbeat contains real-time telemetry data for live graphs
message Heartbeat {
  string node_id = 1;      // Unique node identifier
  double cpu_percent = 2;  // Current CPU usage (0-100)
  double ram_percent = 3;  // Current RAM usage (0-100)
  string uptime = 4;       // System uptime as human-readable string (e.g., "2h 15m 30s")
  double gpu_percent = 5;  // Current GPU usage (0-100)
  double vram_percent = 6; // Current VRAM usage (0-100)
  uint64 vram_total = 7;   // Total VRAM in bytes
  uint64 vram_free = 8;    // Available VRAM in bytes
  string gpu_model = 9;    // GPU Model name
  string timestamp = 10;   // Timestamp of the heartbeat
}

// JobStats contains execution statistics for completed jobs
message JobStats {
  double peak_cpu_percent = 1;   // Peak CPU usage during execution
  int64 duration_ms = 2;         // Total execution duration in milliseconds
}

// JobResult is sent from agent back to orchestrator with execution results
message JobResult {
  string job_id = 1;      // Job ID this result belongs to
  string status = 2;      // Status: "running", "completed", "failed"
  string output_log = 3;  // Container output/logs
  JobStats stats = 4;     // Execution statistics (optional, only on completion)
}

// JobLog is sent from agent to orchestrator for real-time log streaming
message JobLog {
  string job_id = 1;  // Job ID this log belongs to
  string line = 2;    // Single log line from container stdout/stderr
}

// ServerEvent wraps messages sent from orchestrator to agent
message ServerEvent {
  oneof event {
    JobRequest job_request = 1;
  }
}

// AgentEvent wraps messages sent from agent to orchestrator
message AgentEvent {
  string node_id = 1;  // Identifies which agent is sending this event
  oneof event {
    Heartbeat heartbeat = 2;    // Real-time telemetry (every 3s)
    JobResult job_result = 3;   // Result of a job execution
    JobLog job_log = 4;         // Real-time log line from job execution
  }
}

// NodeService handles node registration and management
service NodeService {
  // Register registers a new node with the orchestrator
  rpc Register(NodeInfo) returns (RegistrationResponse) {}
  
  // StreamEvents establishes a bidirectional stream for real-time communication
  // Agent sends AgentEvents (heartbeats, job results)
  // Orchestrator sends ServerEvents (job requests)
  rpc StreamEvents(stream AgentEvent) returns (stream ServerEvent) {}
}
